--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: 3.0.0
+  sqflite: ^1.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: 0.1.2
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +45,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/products/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
